reran experiment 1 and 2

--- a/experiments/reproduce_table1/reproduce_table1.ipynb
+++ b/experiments/reproduce_table1/reproduce_table1.ipynb
@@ -40,6 +40,21 @@
    "execution_count": 1,
    "id": "12010403",
    "metadata": {},
+   "outputs": [],
+   "source": [
+    "import sys\n",
+    "import os\n",
+    "import torch\n",
+    "from torch import nn, optim\n",
+    "from torch.utils import data\n",
+    "from torchvision import datasets, transforms"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "2f5e75a5",
+   "metadata": {},
    "outputs": [
     {
      "name": "stderr",
@@ -50,23 +65,6 @@
      ]
     }
    ],
-   "source": [
-    "import sys\n",
-    "import os\n",
-    "import copy\n",
-    "import torch\n",
-    "from torch import nn, optim\n",
-    "from torch.utils import data\n",
-    "from torchvision import datasets, transforms\n",
-    "from tqdm.auto import tqdm"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "id": "2f5e75a5",
-   "metadata": {},
-   "outputs": [],
    "source": [
     "# This assumes the script is in 'project_root/experiments/reproduce_table1'\n",
     "sys.path.append(\"../../\")\n",
@@ -366,6 +364,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "34b1202d",
+   "metadata": {},
+   "source": [
+    "### Baseline Result"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 10,
    "id": "b831b07d",
@@ -386,7 +392,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "                                                              \r"
+      "                                                              "
      ]
     },
     {
@@ -394,8 +400,14 @@
      "output_type": "stream",
      "text": [
       "==> STAGE 1 (Baseline) COMPLETE ==\n",
-      "    Accuracy: 99.35%\n",
-      "    Size:     148600 bytes\n"
+      "    Accuracy: 99.35%\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\r"
      ]
     }
    ],
@@ -409,10 +421,16 @@
     "\n",
     "print(\"Evaluating baseline model...\")\n",
     "baseline_eval = baseline_model.evaluate(test_loader, {\"acc\": accuracy_fun}, device=DEVICE)\n",
-    "original_size = baseline_model.get_size_in_bits() // 8\n",
     "print(f\"==> STAGE 1 (Baseline) COMPLETE ==\")\n",
-    "print(f\"    Accuracy: {baseline_eval['acc']:.2f}%\")\n",
-    "print(f\"    Size:     {original_size} bytes\")\n"
+    "print(f\"    Accuracy: {baseline_eval['acc']:.2f}%\")\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f31e9cef",
+   "metadata": {},
+   "source": [
+    "### Pruned Result\n"
    ]
   },
   {
@@ -435,7 +453,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "DMC Training (Epochs 1-20):   5%|▌         | 1/20 [00:30<09:41, 30.61s/it]"
+      "DMC Training (Epochs 1-20):   5%|▌         | 1/20 [00:15<05:02, 15.93s/it]"
      ]
     },
     {
@@ -449,7 +467,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "DMC Training (Epochs 1-20):  10%|█         | 2/20 [00:54<07:57, 26.54s/it]"
+      "DMC Training (Epochs 1-20):  10%|█         | 2/20 [00:31<04:44, 15.82s/it]"
      ]
     },
     {
@@ -463,7 +481,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "DMC Training (Epochs 1-20):  15%|█▌        | 3/20 [01:17<07:04, 24.98s/it]"
+      "DMC Training (Epochs 1-20):  15%|█▌        | 3/20 [00:49<04:46, 16.87s/it]"
      ]
     },
     {
@@ -477,7 +495,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "DMC Training (Epochs 1-20):  20%|██        | 4/20 [01:40<06:25, 24.12s/it]"
+      "DMC Training (Epochs 1-20):  20%|██        | 4/20 [01:07<04:32, 17.04s/it]"
      ]
     },
     {
@@ -491,7 +509,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "DMC Training (Epochs 1-20):  25%|██▌       | 5/20 [02:03<05:57, 23.83s/it]"
+      "DMC Training (Epochs 1-20):  25%|██▌       | 5/20 [01:24<04:16, 17.09s/it]"
      ]
     },
     {
@@ -505,7 +523,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "DMC Training (Epochs 1-20):  30%|███       | 6/20 [02:26<05:31, 23.70s/it]"
+      "DMC Training (Epochs 1-20):  30%|███       | 6/20 [01:41<03:58, 17.05s/it]"
      ]
     },
     {
@@ -519,7 +537,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "DMC Training (Epochs 1-20):  35%|███▌      | 7/20 [02:50<05:07, 23.63s/it]"
+      "DMC Training (Epochs 1-20):  35%|███▌      | 7/20 [01:58<03:42, 17.08s/it]"
      ]
     },
     {
@@ -533,7 +551,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "DMC Training (Epochs 1-20):  40%|████      | 8/20 [03:13<04:42, 23.53s/it]"
+      "DMC Training (Epochs 1-20):  40%|████      | 8/20 [02:15<03:24, 17.07s/it]"
      ]
     },
     {
@@ -547,7 +565,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "DMC Training (Epochs 1-20):  45%|████▌     | 9/20 [03:37<04:18, 23.48s/it]"
+      "DMC Training (Epochs 1-20):  45%|████▌     | 9/20 [02:32<03:09, 17.18s/it]"
      ]
     },
     {
@@ -561,7 +579,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "DMC Training (Epochs 1-20):  50%|█████     | 10/20 [04:07<04:16, 25.62s/it]"
+      "DMC Training (Epochs 1-20):  50%|█████     | 10/20 [02:49<02:51, 17.16s/it]"
      ]
     },
     {
@@ -575,7 +593,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "DMC Training (Epochs 1-20):  55%|█████▌    | 11/20 [04:30<03:43, 24.88s/it]"
+      "DMC Training (Epochs 1-20):  55%|█████▌    | 11/20 [03:06<02:34, 17.12s/it]"
      ]
     },
     {
@@ -589,7 +607,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "DMC Training (Epochs 1-20):  60%|██████    | 12/20 [04:54<03:15, 24.43s/it]"
+      "DMC Training (Epochs 1-20):  60%|██████    | 12/20 [03:23<02:15, 16.93s/it]"
      ]
     },
     {
@@ -603,7 +621,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "DMC Training (Epochs 1-20):  65%|██████▌   | 13/20 [05:16<02:47, 23.88s/it]"
+      "DMC Training (Epochs 1-20):  65%|██████▌   | 13/20 [03:40<01:58, 16.87s/it]"
      ]
     },
     {
@@ -617,7 +635,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "DMC Training (Epochs 1-20):  70%|███████   | 14/20 [05:39<02:21, 23.53s/it]"
+      "DMC Training (Epochs 1-20):  70%|███████   | 14/20 [03:56<01:40, 16.78s/it]"
      ]
     },
     {
@@ -631,7 +649,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "DMC Training (Epochs 1-20):  75%|███████▌  | 15/20 [06:02<01:56, 23.26s/it]"
+      "DMC Training (Epochs 1-20):  75%|███████▌  | 15/20 [04:13<01:23, 16.69s/it]"
      ]
     },
     {
@@ -645,7 +663,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "DMC Training (Epochs 1-20):  80%|████████  | 16/20 [06:24<01:32, 23.05s/it]"
+      "DMC Training (Epochs 1-20):  80%|████████  | 16/20 [04:29<01:06, 16.68s/it]"
      ]
     },
     {
@@ -659,7 +677,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "DMC Training (Epochs 1-20):  85%|████████▌ | 17/20 [06:47<01:08, 22.91s/it]"
+      "DMC Training (Epochs 1-20):  85%|████████▌ | 17/20 [04:46<00:49, 16.63s/it]"
      ]
     },
     {
@@ -673,7 +691,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "DMC Training (Epochs 1-20):  90%|█████████ | 18/20 [07:09<00:45, 22.84s/it]"
+      "DMC Training (Epochs 1-20):  90%|█████████ | 18/20 [05:03<00:33, 16.62s/it]"
      ]
     },
     {
@@ -687,7 +705,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "DMC Training (Epochs 1-20):  95%|█████████▌| 19/20 [07:32<00:22, 22.85s/it]"
+      "DMC Training (Epochs 1-20):  95%|█████████▌| 19/20 [05:19<00:16, 16.68s/it]"
      ]
     },
     {
@@ -701,7 +719,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "DMC Training (Epochs 1-20): 100%|██████████| 20/20 [07:55<00:00, 23.78s/it]\n"
+      "DMC Training (Epochs 1-20): 100%|██████████| 20/20 [05:36<00:00, 16.83s/it]\n"
      ]
     },
     {
@@ -726,7 +744,6 @@
       "\n",
       "==> STAGE 2 (Pruned) COMPLETE ==\n",
       "    Accuracy: 98.55%\n",
-      "    Size:     19876 bytes (13.38% of original)\n",
       "\n",
       "===> Layerwise Prunning Results:\n",
       "    Layer name : conv2d_0, Original size 0.609375 Reduced size 0.609375:  Size Ratio: 0.00%\n",
@@ -744,15 +761,21 @@
     "\n",
     "print(\"Evaluating pruned model...\")\n",
     "pruned_eval = pruned_model.evaluate(test_loader, {\"acc\": accuracy_fun}, device=DEVICE)\n",
-    "pruned_size = pruned_model.get_size_in_bits() // 8\n",
     "print(f\"\\n==> STAGE 2 (Pruned) COMPLETE ==\")\n",
     "print(f\"    Accuracy: {pruned_eval['acc']:.2f}%\")\n",
-    "print(f\"    Size:     {pruned_size} bytes ({pruned_size/original_size*100:.2f}% of original)\")\n",
     "\n",
     "print(f\"\\n===> Layerwise Prunning Results:\")\n",
     "for i, (name, module) in enumerate(pruned_model.names_layers()):\n",
     "    if (\"conv2d\" in name) or (\"linear\" in name):\n",
     "        print(f\"    Layer name : {name}, Original size {baseline_model[i].get_size_in_bits()/(8*1024)} Reduced size {module.get_size_in_bits()/(8*1024)}:  Size Ratio: {(1 - module.get_size_in_bits()/baseline_model[i].get_size_in_bits())*100:.2f}%\") # type: ignore\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4b3b8dd1",
+   "metadata": {},
+   "source": [
+    "### Quantized and Bit-Packed Result"
    ]
   },
   {
@@ -775,7 +798,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "DMC Training (Epochs 1-15):   7%|▋         | 1/15 [00:39<09:09, 39.28s/it]"
+      "DMC Training (Epochs 1-15):   7%|▋         | 1/15 [00:35<08:16, 35.48s/it]"
      ]
     },
     {
@@ -789,7 +812,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "DMC Training (Epochs 1-15):  13%|█▎        | 2/15 [01:25<09:20, 43.09s/it]"
+      "DMC Training (Epochs 1-15):  13%|█▎        | 2/15 [01:11<07:42, 35.58s/it]"
      ]
     },
     {
@@ -803,7 +826,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "DMC Training (Epochs 1-15):  20%|██        | 3/15 [02:04<08:18, 41.52s/it]"
+      "DMC Training (Epochs 1-15):  20%|██        | 3/15 [01:46<07:06, 35.53s/it]"
      ]
     },
     {
@@ -817,7 +840,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "DMC Training (Epochs 1-15):  27%|██▋       | 4/15 [02:44<07:28, 40.75s/it]"
+      "DMC Training (Epochs 1-15):  27%|██▋       | 4/15 [02:22<06:30, 35.53s/it]"
      ]
     },
     {
@@ -831,7 +854,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "DMC Training (Epochs 1-15):  33%|███▎      | 5/15 [03:23<06:43, 40.36s/it]"
+      "DMC Training (Epochs 1-15):  33%|███▎      | 5/15 [02:57<05:55, 35.54s/it]"
      ]
     },
     {
@@ -845,7 +868,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "DMC Training (Epochs 1-15):  40%|████      | 6/15 [04:08<06:17, 41.96s/it]"
+      "DMC Training (Epochs 1-15):  40%|████      | 6/15 [03:31<05:15, 35.09s/it]"
      ]
     },
     {
@@ -859,7 +882,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "DMC Training (Epochs 1-15):  47%|████▋     | 7/15 [04:49<05:31, 41.46s/it]"
+      "DMC Training (Epochs 1-15):  47%|████▋     | 7/15 [04:06<04:38, 34.80s/it]"
      ]
     },
     {
@@ -873,7 +896,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "DMC Training (Epochs 1-15):  53%|█████▎    | 8/15 [05:28<04:45, 40.83s/it]"
+      "DMC Training (Epochs 1-15):  53%|█████▎    | 8/15 [04:41<04:04, 34.99s/it]"
      ]
     },
     {
@@ -887,7 +910,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "DMC Training (Epochs 1-15):  60%|██████    | 9/15 [06:08<04:02, 40.41s/it]"
+      "DMC Training (Epochs 1-15):  60%|██████    | 9/15 [05:15<03:28, 34.77s/it]"
      ]
     },
     {
@@ -901,7 +924,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "DMC Training (Epochs 1-15):  67%|██████▋   | 10/15 [06:48<03:20, 40.20s/it]"
+      "DMC Training (Epochs 1-15):  67%|██████▋   | 10/15 [05:50<02:53, 34.65s/it]"
      ]
     },
     {
@@ -915,7 +938,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "DMC Training (Epochs 1-15):  73%|███████▎  | 11/15 [07:27<02:39, 39.91s/it]"
+      "DMC Training (Epochs 1-15):  73%|███████▎  | 11/15 [06:23<02:17, 34.33s/it]"
      ]
     },
     {
@@ -929,7 +952,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "DMC Training (Epochs 1-15):  80%|████████  | 12/15 [08:07<02:00, 40.05s/it]"
+      "DMC Training (Epochs 1-15):  80%|████████  | 12/15 [06:57<01:42, 34.17s/it]"
      ]
     },
     {
@@ -943,7 +966,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "DMC Training (Epochs 1-15):  87%|████████▋ | 13/15 [08:55<01:24, 42.40s/it]"
+      "DMC Training (Epochs 1-15):  87%|████████▋ | 13/15 [07:31<01:08, 34.10s/it]"
      ]
     },
     {
@@ -957,7 +980,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "DMC Training (Epochs 1-15):  93%|█████████▎| 14/15 [09:58<00:48, 48.54s/it]"
+      "DMC Training (Epochs 1-15):  93%|█████████▎| 14/15 [08:05<00:34, 34.19s/it]"
      ]
     },
     {
@@ -971,7 +994,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "DMC Training (Epochs 1-15): 100%|██████████| 15/15 [10:40<00:00, 42.72s/it]\n"
+      "DMC Training (Epochs 1-15): 100%|██████████| 15/15 [08:40<00:00, 34.69s/it]\n"
      ]
     },
     {
@@ -996,7 +1019,6 @@
       "\n",
       "==> STAGE 3 (Quantized-Pruned) COMPLETE ==\n",
       "    Accuracy: 97.59%\n",
-      "    Size:     2662 bytes (1.79% of original)\n",
       "\n",
       "===> Layerwise Pruned and Quantized Results:\n",
       "    Layer name : conv2d_0, Original size   0.6094 Reduced size   0.1064:  Size Ratio: 82.53%\n",
@@ -1012,10 +1034,8 @@
     "\n",
     "print(\"Evaluating final quantized-pruned model...\")\n",
     "quantized_eval = quantized_model.evaluate(test_loader, {\"acc\": accuracy_fun}, device=DEVICE)\n",
-    "quantized_size = quantized_model.fuse().to(DEVICE).get_size_in_bits() // 8\n",
     "print(f\"\\n==> STAGE 3 (Quantized-Pruned) COMPLETE ==\")\n",
     "print(f\"    Accuracy: {quantized_eval['acc']:.2f}%\")\n",
-    "print(f\"    Size:     {quantized_size} bytes ({quantized_size/original_size*100:.2f}% of original)\")\n",
     "\n",
     "print(f\"\\n===> Layerwise Pruned and Quantized Results:\")\n",
     "for i, (name, module) in enumerate(quantized_model.names_layers()):\n",
@@ -1024,8 +1044,28 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "f75cdfe5",
+   "metadata": {},
+   "source": [
+    "### Final Result"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 15,
+   "id": "cfcbd061",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "original_size = baseline_model.fuse(device=DEVICE).get_size_in_bytes()\n",
+    "pruned_size = pruned_model.fuse(device=DEVICE).get_size_in_bytes()\n",
+    "quantized_size = quantized_model.fuse(device=DEVICE).get_size_in_bytes()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
    "id": "ca4be826",
    "metadata": {},
    "outputs": [
@@ -1037,18 +1077,18 @@
       "--- REPRODUCTION FINISHED ---\n",
       "\n",
       "Final Results Summary:\n",
-      "Baseline:   99.35% Acc,  145.12 bytes\n",
-      "Pruned:     98.55% Acc,   19.41 bytes, 13.38% of original\n",
-      "Quantized:  97.59% Acc,    2.60 bytes, 1.79% of original\n"
+      "Baseline:   99.35% Acc,  144.95KB\n",
+      "Pruned:     98.55% Acc,   19.31KB, 13.32% of original\n",
+      "Quantized:  97.59% Acc,    2.60KB, 1.79% of original\n"
      ]
     }
    ],
    "source": [
     "print(\"\\n--- REPRODUCTION FINISHED ---\")\n",
     "print(\"\\nFinal Results Summary:\")\n",
-    "print(f\"Baseline:   {baseline_eval['acc']:.2f}% Acc, {original_size/1024:7.2f} bytes\")\n",
-    "print(f\"Pruned:     {pruned_eval['acc']:.2f}% Acc, {pruned_size/1024:7.2f} bytes, {pruned_size/original_size*100:.2f}% of original\")\n",
-    "print(f\"Quantized:  {quantized_eval['acc']:.2f}% Acc, {quantized_size/1024:7.2f} bytes, {quantized_size/original_size*100:.2f}% of original\")"
+    "print(f\"Baseline:   {baseline_eval['acc']:.2f}% Acc, {original_size/1024:7.2f}KB\")\n",
+    "print(f\"Pruned:     {pruned_eval['acc']:.2f}% Acc, {pruned_size/1024:7.2f}KB, {pruned_size/original_size*100:.2f}% of original\")\n",
+    "print(f\"Quantized:  {quantized_eval['acc']:.2f}% Acc, {quantized_size/1024:7.2f}KB, {quantized_size/original_size*100:.2f}% of original\")"
    ]
   }
  ],
